fix(DS-1016): fix alignment for searchbar button

--- a/src/components/z-searchbar/styles.css
+++ b/src/components/z-searchbar/styles.css
@@ -10,6 +10,7 @@
 
   z-index: 15;
   display: flex;
+  align-items: flex-end;
   column-gap: calc(var(--space-unit) * 2);
   font-family: var(--font-family-sans);
   font-weight: var(--font-rg);
